--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,8 @@
 
 body {
   background: rgb(32, 35, 41);
+  line-height: 1.3;
+  letter-spacing: 0.8px;
   padding: 0;
   margin: 0;
 }
@@ -47,7 +49,65 @@ h1.brand {
   color: #5bcae8;
 }
 
+h2 {
+  font-size: 30px;
+  color: rgb(41, 44, 51);
+}
+
+p {
+  font-size: 20px;
+
+  color: #969b9c;
+  text-align: justify;
+  hyphens: auto;
+}
+
+.btn-back {
+  color: #6f7d81;
+  margin: 20px 0;
+}
+
+.btn-back a {
+  color: #6f7d81;
+}
+
+.btn-back a:hover {
+  color: #5bcae8;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.users {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  margin: 40px 0 0;
+  gap: 20px;
+}
+
+.users li {
+  cursor: pointer;
+}
+
+.users li::before {
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: #5bcae8;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
 .user-page img {
   max-width: 200px;
   max-height: 200px;
+  border-radius: 50%;
+}
+
+.user-page b {
+  color: #979999;
 }
